# 401_nesterov

./: .gitignore  README.md
ConsoleApp/: ConsoleApp.csproj  Program.cs
Contracts/: StorageEntities.cs
FaceEmbeddingsAsync/: AsyncInferenceSession.cs  Exceptions.cs  FaceEmbeddingsAsync.csproj  ImageUtils.cs
Server/: Controller.cs  EmbeddingsManager.cs  Metrics.cs  MetricsList.cs  Program.cs  ReusableToken.cs  Server.csproj  Server.sln  Storage.cs  images.db  images.db-shm
Server/Migrations/: 20221219000715_ImagesDb.Designer.cs  20221219000715_ImagesDb.cs  20221219231526_Images.Designer.cs  20221223004832_Images.Designer.cs  20221223004832_Images.cs  ImagesContextModelSnapshot.cs
Server/Properties/: launchSettings.json
WebApp/: pyproject.toml
WebApp/streamlitapp/: controller.py  main.py  run.py
WindowApp/: DynamicImagesGrid.cs  MainWindow.xaml  MainWindow.xaml.cs  ProgressBarReporter.cs  ReusableToken.cs  Service.cs  Storage.cs  StorageEntities.cs  StorageWindow.xaml  StorageWindow.xaml.cs  Utils.cs  WindowApp.csproj  images.db
WindowApp/Migrations/: 20221123170258_ImageStorage.Designer.cs  20221123170258_ImageStorage.cs  ImagesContextModelSnapshot.cs
