[tool.poetry]
name = "streamlitapp"
version = "0.1.0"
description = ""
authors = ["Dmitry Nesterov <dim.nesterov2015@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
streamlit = "^1.16.0"
aiohttp = "^3.8.3"

[tool.poetry.scripts]
startup = 'streamlitapp.run:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
